Fix for and simplification of detecting winner

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,12 @@ body {
   background-color: white;
 }
 
+p{
+  margin: 0;
+  text-align: center;
+}
+
 .shape{
   font-size: 4.5rem;
+  margin: 0;
 }
